--- a/Desafio HTML/Formulario/index.html
+++ b/Desafio HTML/Formulario/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css" />
-  <title>Document</title>
+  <title>Contato</title>
 </head>
 
 <body>
@@ -38,8 +38,7 @@
           <input id="check-email" type="checkbox" />
           <label for="check-email">Aceito receber novidades por e-mail</label>
         </div>
-        
-          <button type="submit" id="btn">Enviar</button>
+        <button type="submit" id="btn">Enviar</button>
         </div>
 
     </fieldset>
