--- a/Desafio HTML/Glossario/index.html
+++ b/Desafio HTML/Glossario/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/media.css">
   <link rel="stylesheet" href="./css/avisos.css">
-  <title>Document</title>
+  <title>Glossário</title>
 </head>
 
 <body>
@@ -32,26 +32,38 @@
           <h3>Título <br>(centralização,<br> fonte 12 e com negrito)</h3>
           <img src="assets/arrow_up.svg" class="arrow-img" alt="">
         </div>
-        <div></div>
       </div>
       <h3 class="content-glossario"><b>Glossário</b></h3>
       <div class="glossario_margin">
         <img class="arrow-img"  src="assets/arrow_right.svg"/>
         <h3>espaço de uma linha(1,5)</h3>
       </div>
-      <div></div>
-      <p><b>Lorem Ipsum</b> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-        industry's standard dummy text ever since the 1500s</p>
-      <p><b>Lorem Ipsum</b> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-        industry's standard dummy text ever since the 1500s</p>
-      <p><b>Lorem Ipsum</b> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-        industry's standard dummy text ever since the 1500s</p>
-      <p><b>Lorem Ipsum</b> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-        industry's standard dummy text ever since the 1500s</p>
-      <p><b>Lorem Ipsum</b> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-        industry's standard dummy text ever since the 1500s</p>
-      <p><b>Lorem Ipsum</b> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-        industry's standard dummy text ever since the 1500s</p>
+      <dl>
+        <dt>BASH: </dt>
+        <dd>Software responsável em gerar interface, por linha de comando, entre sistemas operacionais, normalmente Linux, e o usuário.</dd>
+
+        <dt>DBA: </dt>
+        <dd>Profissional responsável por manter operante um sistema de banco de dados.</dd>
+
+        <dt>e-Enterprises: </dt>
+        <dd>Empresas que não existem fisicamente. São estabelecidas para fornecer produtos e serviços utilizando os meios disponíveis na Internet.</dd>
+
+        <dt>COPYRIGHT: </dt>
+        <dd>palavra inglesa, de uso internacional e indicativa de propriedade literária ou direito autoral. </dd>
+
+        <dt>Firewall: </dt>
+        <dd>Equipamento ou software responsável em filtrar, regrar e limitar o acesso, entrante e sainte, de dados de uma rede de computador interna e uma rede externa, com o proposito de segurança.</dd>
+
+        <dt>Indoor: </dt>
+        <dd>Nesse contexto, se refere a serviços veiculados dentro dos limites físicos de um estabelecimento.</dd>
+
+        <dt>Middleware: </dt>
+        <dd>É um programa de computador que faz a mediação entre software e demais aplicações. É utilizado para mover ou transportar informações e dados entre programas de diferentes protocolos de comunicação, plataformas e dependências do sistema operacional.</dd>
+
+        <dt>Plug-in: </dt>
+        <dd>Módulo de software que agrega funções a outro software</dd>
+
+      </dl>
       <div class="right-down">
         <h1>2cm</h1>
         <img id="right" class="arrow-img" src="assets/arrow_right.svg"/>
